correction path + css

--- a/templates/books.html.twig
+++ b/templates/books.html.twig
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <div id="blocArticles">
+        <div class="blocArticles">
             <h4>{{ book.title }}</h4>
             <p>Résumé : {{ book.resume }}<br/>
             <p>Author : {{ book.author }}<br/>
