--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@ nav ul li{
 }
 
 main{
-    display: flex;
+
     width: 100%;
     height: auto;
     background-color: #ffffff;
@@ -50,23 +50,23 @@ main{
     text-align: center;
 }
 
-#blocArticles{
-    display: block;
+.blocArticles{
+    display: flex;
     justify-content: center;
-    width: 100%;
+    align-items: center;
+
 }
 
 
-#blocArticles ul{
+.blocArticles ul{
     display: block;
     justify-content: space-between;
     align-items: center;
 
-
 }
 
-#blocArticles ul li{
-    width: 50%;
+.blocArticles ul li{
+    width: 30%;
     margin: 2%;
     text-decoration: none;
     list-style-type: none;
@@ -75,7 +75,7 @@ main{
 
 
 }
-#blocArticles ul li:hover{
+.blocArticles ul li:hover{
     animation: pulse 1s linear 0s  normal;
 }
 
