--- a/templates/books.html.twig
+++ b/templates/books.html.twig
@@ -24,8 +24,8 @@
     <main>
         <div class="blocArticles">
             <h4>{{ book.title }}</h4>
-            <p>Résumé : {{ book.resume }}<p>
-            <p>Author : {{ book.author }}<p>
+            <p>Résumé : {{ book.resume }}</p>
+            <p>Author : {{ book.author }}</p>
             <p>Nombre de page : {{ book.nbpages }}</p>
         </div>
     </main>
