--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@ nav ul li{
 }
 
 main{
-
+    display: flex;
     width: 100%;
     height: auto;
     background-color: #ffffff;
@@ -51,9 +51,10 @@ main{
 }
 
 .blocArticles{
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
+    width: 80%;
 
 }
 
