--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -23,6 +23,17 @@
 
 
     <main>
+
+        <div class="search">
+            <form action="{{ path('book_search') }}" method="get">
+                <label for="word"><strong>Que cherchez vous ? </strong></label>
+                <input type="text" name="word" placeholder="Votre recherche">
+            <input type="submit">
+
+            </form>
+        </div>
+
+
         <div class="blocArticles">
             <ul>
             {% for book in books %}
