--- a/templates/search.html.twig
+++ b/templates/search.html.twig
@@ -25,6 +25,9 @@
 <main>
     <div class="blocArticles">
         <ul>
+
+            <p>Votre recherche : <strong>{{ word }}</strong></p>
+
             {% for book in books %}
                 <li>
                     <h4><a href="{{ path('book', {'id':book.id}) }}">{{ book.title }}</a></h4>
