--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,25 @@
+*{
+    border: solid 1px  black;
+}
 body{
     margin: 0;
     padding: 0;
 }
-header, footer{
+header{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     height: 80px;
     background-color: #f1f2f3;
     padding-left: 40px;
     padding-right: 40px;
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
 }
 
 a{
@@ -49,25 +59,43 @@ main{
     justify-content: center;
     text-align: center;
 }
+.show_auteur{
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
+.show_auteur:hover{
+    animation: pulse 1s linear 0s infinite normal;
+}
 
+.logo{
+    width: 100px;
+    height: auto;
+}
+
+.search{
+    width: 30%;
+    height: auto;
+    margin: auto;
+}
 .blocArticles{
     display: block;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
 
 }
 
 
 .blocArticles ul{
-    display: block;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 
 }
 
 .blocArticles ul li{
-    width: 30%;
+    width: 35%;
     margin: 2%;
     text-decoration: none;
     list-style-type: none;
@@ -86,10 +114,6 @@ main{
 
 .img-fluid{
     width: 100%;
-    height: auto;
-}
-.logo{
-    width: 100px;
     height: auto;
 }
 
