--- a/templates/search.html.twig
+++ b/templates/search.html.twig
@@ -1,28 +1,6 @@
+{% extends "base.html.twig" %}
 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-
-    <link  type="text/css" rel="stylesheet" href="{{ asset('css/style.css') }}">
-</head>
-<body>
-<header>
-    <div class="logo ">
-        <img class="img-fluid" src="{{ asset('img/logo_google.png') }}" alt="logo" width="850" height="300"></div>
-    <nav>
-        <ul>
-            <li>Lien 1</li>
-            <li>Lien 2</li>
-            <li>Lien 3</li>
-        </ul>
-    </nav>
-</header>
-
-
-<main>
+{% block section2 %}
     <div class="blocArticles">
         <ul>
 
@@ -41,6 +19,4 @@
             {% endfor %}
         </ul>
     </div>
-</main>
-
-</body>
+{% endblock %}
