changement route et name

--- a/templates/admin/auteurs/insert_auteur.html.twig
+++ b/templates/admin/auteurs/insert_auteur.html.twig
@@ -4,7 +4,7 @@
     <div class="blocArticles">
 
         <div class="search">
-            <form action="{{ path('book_search') }}" method="get">
+            <form action="{{ path('admin_book_search') }}" method="get">
                 <label for="word"><strong>Que cherchez vous ? </strong></label>
                 <input type="text" name="word" placeholder="Votre recherche">
                 <input type="submit">
