--- a/templates/admin/auteurs/auteurs.html.twig
+++ b/templates/admin/auteurs/auteurs.html.twig
@@ -5,13 +5,13 @@
         <ul>
             {% for auteur in auteurs %}
                 <li>
-                    <h4><a href="{{ path('show_auteur', {'id':auteur.id}) }}">{{ auteur.name }}</a></h4>
+                    <h4><a href="{{ path('admin_show_auteur', {'id':auteur.id}) }}">{{ auteur.name }}</a></h4>
                     <p>Birth Date : {{ auteur.birthdate | date('d/m/Y') }}</p>
 
                     <p>Death Date : {{ auteur.deathdate  | date('d/m/Y') }}</p>
 
                     <p> biography : {{ auteur.biography }}</p>
-                    <p> <a href="{{ path('delete_auteur', {'id':auteur.id}) }}">Suprimer l'auteur</a></p>
+                    <p> <a href="{{ path('admin_delete_auteur', {'id':auteur.id}) }}">Suprimer l'auteur</a></p>
                 </li>
             {% endfor %}
         </ul>
