--- a/templates/admin/auteurs/show_auteur.html.twig
+++ b/templates/admin/auteurs/show_auteur.html.twig
@@ -11,7 +11,7 @@
                     <p>Death Date : {{ auteur.deathdate  | date('d/m/Y') }}</p>
 
                     <p> biography : {{ auteur.biography }}</p>
-                    <p> <a href="{{ path('delete_auteur', {'id':auteur.id}) }}">Suprimer l'auteur</a></p>
+                    <p> <a href="{{ path('admin_delete_auteur', {'id':auteur.id}) }}">Suprimer l'auteur</a></p>
 
 
 
