--- a/templates/front/books/books.html.twig
+++ b/templates/front/books/books.html.twig
@@ -2,15 +2,21 @@
 
 {% block section2 %}
     <div class="blocArticles">
+        <ul>
+        {% for book in books %}
+            <li>
         <h1>Mon livre : </h1>
         <div>
             <p>Titre : {{ book.title }}</p>
-            <p>Auteur : {{ book.auteur }}</p>
+
             <p>Résumé : {{ book.resume }}</p>
             <p>Nombre de pages : {{ book.nbpages }}</p>
         </div>
         <a href="{{ path('book_show', {'id' : book.id}) }}">
             Voir le livre
         </a>
+            </li>
+        {% endfor %}
+        </ul>
     </div>
 {% endblock %}
